Reorder manifest fields: complete_contiguous after complete

--- a/output/dry-run/oral/output/-input.manifest.json
+++ b/output/dry-run/oral/output/-input.manifest.json
@@ -3,6 +3,6 @@
     "-input.parsed.csv": true
   },
   "complete": 1,
-  "remaining": 0,
-  "highest_contiguous": 1
+  "complete_contiguous": 1,
+  "remaining": 0
 }
